experimental/ir/testdata/fields/maps/map_option.proto.stderr.txt
error: cannot resolve message field name for `test.Foo.MapEntry`
  --> testdata/fields/maps/map_option.proto:34:17
   |
34 |                 "my_key": {},
   |                 ^^^^^^^^^^^^ field referenced here
...
39 |     map<string, Foo> map = 1;
   |     ---------------- expected `MapEntry` field due to this
   |
   = help: the text format lacks syntax for map-typed fields; instead, the
           syntax is the same as for a repeated message whose fields are named
           `key` and `value`
   = help: for example, `map_field { key: ..., value: ... }`

encountered 1 error
